# rustpy-xlsxwriter

./: .gitignore  .tool-versions  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  benchmark.py  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI.yml  codeql.yml  docs.yml  release-drafter.yml
examples/: 01_basic.py  02_multiple_sheets.py  03_dataframe.py  04_freeze_panes.py  05_bytesio.py  06_generator.py  07_password.py  08_full_featured.py  09_polars.py  10_context_manager.py  11_datetime_format.py  12_bold_headers.py  13_autofit.py  14_csv_tsv.py  15_column_widths.py  16_cell_formats.py  quickstart.ipynb
rustpy_xlsxwriter/: __init__.py  rustpy_xlsxwriter.pyi
src/: arrow_ffi.rs  arrow_writer.rs  cell.rs  csv_writer.rs  data_types.rs  format.rs  helpers.rs  lib.rs  metadata.rs  utils.rs  worksheet.rs
tests/: conftest.py  test_all.py  test_benchmark.py  test_bytesio.py  test_column_widths.py  test_csv.py  test_dataframe.py  test_format.py  test_freeze_panes.py  test_metadata.py  test_password.py  test_pathlib_target.py  test_polars.py  test_styling.py  test_type_caching.py  test_validation.py  test_write_functional.py  test_write_multi.py  test_write_single.py
