[package]
name = "rustpy-xlsxwriter"
version = "0.4.1"
edition = "2021"
authors = ["Rahmad Afandi <rahmadafandiii@gmail.com>"]
description = "Rust Python bindings for rust_xlsxwriter"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rahmadafandi/rustpy-xlsxwriter"
repository = "https://github.com/rahmadafandi/rustpy-xlsxwriter"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustpy_xlsxwriter"
crate-type = ["cdylib"]

[dependencies]
arrow-array = { version = "58.0.0", features = ["ffi"] }
arrow-schema = { version = "58.0.0", features = ["ffi"] }
indexmap = "2.8.0"
pyo3 = { version = "0.28.2", features = ["extension-module", "indexmap"] }
rust_xlsxwriter = { version = "0.93.0", features = ["constant_memory", "ryu", "zlib"] }
ryu = "1.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[package.metadata.pyo3]
name = "rustpy_xlsxwriter.rustpy_xlsxwriter"
