[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"


[project]
name = "rustpy-xlsxwriter"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
authors = [{ name = "Rahmad Afandi", email = "rahmadafandiii@gmail.com" }]

[project.optional-dependencies]
tests = ["pytest", "XlsxWriter", "pytest-codspeed","faker"]
[tool.maturin]
features = ["pyo3/extension-module"]
