[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"


[project]
name = "rustpy-xlsxwriter"
description = "High-performance Excel file generation powered by Rust"
readme = "README.md"
license = { text = "MIT" }
keywords = ["excel", "xlsx", "rust", "xlsxwriter", "performance"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
]
dynamic = ["version"]
authors = [{ name = "Rahmad Afandi", email = "rahmadafandiii@gmail.com" }]

[project.urls]
Homepage = "https://github.com/rahmadafandi/rustpy-xlsxwriter"
Repository = "https://github.com/rahmadafandi/rustpy-xlsxwriter"
Issues = "https://github.com/rahmadafandi/rustpy-xlsxwriter/issues"

[project.optional-dependencies]
tests = ["pytest", "XlsxWriter", "pytest-codspeed", "faker", "openpyxl", "pandas", "polars"]

[tool.maturin]
features = ["pyo3/extension-module"]
